@@ -28,17 +28,16 @@
 package com.projectswg.holocore.test_resources;
 
 import com.projectswg.common.network.packets.SWGPacket;
-import com.projectswg.holocore.resources.support.objects.permissions.ContainerPermissionsType;
+import com.projectswg.holocore.resources.support.global.player.Player;
+import com.projectswg.holocore.resources.support.global.player.PlayerState;
 import com.projectswg.holocore.resources.support.objects.GameObjectType;
+import com.projectswg.holocore.resources.support.objects.permissions.ContainerPermissionsType;
 import com.projectswg.holocore.resources.support.objects.swg.SWGObject;
 import com.projectswg.holocore.resources.support.objects.swg.creature.CreatureObject;
 import com.projectswg.holocore.resources.support.objects.swg.player.PlayerObject;
 import com.projectswg.holocore.resources.support.objects.swg.tangible.TangibleObject;
-import com.projectswg.holocore.resources.support.global.player.Player;
-import com.projectswg.holocore.resources.support.global.player.PlayerState;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicLong;
 
 public class GenericCreatureObject extends CreatureObject {
@@ -59,6 +58,7 @@ public class GenericCreatureObject extends CreatureObject {
 		};
 		player.setPlayerState(PlayerState.ZONED_IN);
 		setHasOwner(true);
+		setupAsCharacter();
 		loadRange = -1;
 	}
 	
@@ -75,16 +75,14 @@ public class GenericCreatureObject extends CreatureObject {
 		}
 	}
 	
-	public void setupAsCharacter() {
-		for (String slotName : Arrays.asList("inventory", "datapad", "hangar", "default_weapon", "mission_bag", "hat", "hair", "earring_r", "earring_l", "eyes", "mouth", "neck", "cloak", "back", "chest1", "chest2", "chest3_r", "chest3_l", "bicep_r", "bicep_l", "bracer_lower_r", "bracer_upper_r", "bracer_lower_l", "bracer_upper_l", "wrist_r", "wrist_l", "gloves", "hold_r", "hold_l", "ring_r", "ring_l", "utility_belt", "pants1", "pants2", "shoes", "ghost", "bank", "appearance_inventory", "cybernetic_hand_l", "cybernetic_hand_r")) {
-			setSlot(slotName, null);
-		}
+	private void setupAsCharacter() {
+		setSlots(List.of("inventory", "datapad", "hangar", "default_weapon", "mission_bag", "hat", "hair", "earring_r", "earring_l", "eyes", "mouth", "neck", "cloak", "back", "chest1", "chest2", "chest3_r", "chest3_l", "bicep_r", "bicep_l", "bracer_lower_r", "bracer_upper_r", "bracer_lower_l", "bracer_upper_l", "wrist_r", "wrist_l", "gloves", "hold_r", "hold_l", "ring_r", "ring_l", "utility_belt", "pants1", "pants2", "shoes", "ghost", "bank", "appearance_inventory", "cybernetic_hand_l", "cybernetic_hand_r"));
 		
-		setArrangement(Collections.singletonList(Collections.singletonList("rider")));
+		setArrangement(List.of(List.of("rider")));
 		setGameObjectType(GameObjectType.GOT_CREATURE_CHARACTER);
 		
 		PlayerObject playerObject = new PlayerObject(-getObjectId());
-		playerObject.setArrangement(Collections.singletonList(Collections.singletonList("ghost")));
+		playerObject.setArrangement(List.of(List.of("ghost")));
 		playerObject.moveToContainer(this);
 		createInventoryObject("inventory");
 		createInventoryObject("datapad");
@@ -102,7 +100,7 @@ public class GenericCreatureObject extends CreatureObject {
 	
 	private void createInventoryObject(String slot) {
 		SWGObject obj = new TangibleObject(GENERATED_IDS.incrementAndGet());
-		obj.setArrangement(Collections.singletonList(Collections.singletonList(slot)));
+		obj.setArrangement(List.of(List.of(slot)));
 		obj.setContainerPermissions(ContainerPermissionsType.INVENTORY);
 		obj.moveToContainer(this);
 	}
